# pi-code-orchestrator

./: .checkov.yaml  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .zizmor.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOLT_REMOTE.md  HANDOFF.md  LICENSE  README.md  RELEASING.md  SECURITY.md  manifest
.beads/: config.yaml  metadata.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic.yml  feature_request.yml  issue.yml  sub-issue.yml
.github/rulesets/: feature-branches.json  main.json
.github/workflows/: ai-review.yml  ci.yml  codeql.yml  pi-standard-ci.yml  pi-standard-security.yml  release.yml
docs/: ISSUE-TRACKING.md  POST_PUBLIC_GITHUB_CHECKLIST.md  PUBLIC_RELEASE_REVIEW.md  README.md  SECURITY-MODEL.md  architecture.md  configuration.md  development.md  getting-started.md  troubleshooting.md  usage.md
docs/architecture/: adr-0001-temporal-runtime-control-plane.md
docs/explanation/: architecture.md  design-principles.md
docs/how-to/: develop-and-contribute.md  (+6 more)
migrations/: 001_initial.sql  002_allow_failed_agent_status.sql  003_iterm_terminal_targets.sql  004_mcp_tools.sql  005_runner_lease_support.sql  006_agent_lease_unique.sql  007_delivery_parity.sql
scripts/: bootstrap-repo.sh  install.sh  lantern-doctor.sh  lantern-down.sh  lantern-up.sh  lantern.toml  launchd.plist  setup-iterm.sh  startwork.sh  stopwork.sh
src/: autoheal.rs  config.rs  doctor_state.rs  main.rs  types.rs
tests/: cli.rs  migration_quarantine.rs
(+50 files in other folders)
