[package]
name = "lantern"
version = "2026.6.0"
edition = "2021"
authors = ["Lantern Team"]
description = "Native local orchestration runtime for terminal AI coding squads"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dashmap = "6"
once_cell = "1"
dirs = "6"
tonic = "0.13"
bytes = "1"
http = "1"
uuid = { version = "1", features = ["v4", "serde"] }
hostname = "0.4"
toml = "1.1"
iterm2 = "0.2.1"
temporal-sdk-core-protos = "0.1.0"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
